@@ -2,6 +2,7 @@
   * Added the RobidouxSharp filter (originally defined Dec 2011)
   * Fixed Variable Blur - incorrect blur area calculation
     Also Gaussian is sampling proerly. Substitute the faster Cubic for now.
+  * Convert nolonger will do an implict write to a single space image
 
 2012-04-21  6.7.6-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-7, SVN revision 7587.
